# BobrWeatherBot

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
bot/: .env.template  main.py
bot/core/: config.py
bot/core/schemas/: __init__.py  weather.py
bot/core/texts/: __init__.py  phrases.py  weather_icon.py
bot/handlers/: handlers.py
bot/middlewares/: __init__.py  service_middleware.py
bot/repo/: weather.py
bot/repository/: __init__.py  cache.py
bot/services/: __init__.py  weather_service.py
