[tool.poetry]
name = "bobrweatherbot"
version = "0.1.0"
description = "track your weather and dress warmly"
authors = ["AleksGin"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13.1"
pydantic-settings = "^2.5.2"
asyncio = "^3.4.3"
aiohttp = "^3.10.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"